Updated the CSS for all elements associated with the results box to use a grid display. Updated the search js to apply new classes

--- a/test.html
+++ b/test.html
@@ -27,9 +27,9 @@
             <!-- <div id="movieTitle"></div> -->
             <!-- <div id="result"></div> -->
         </div>
-        <div id="foot">
+        <!-- <div id="foot">
             
-        </div>
+        </div> -->
         <script src="./MovieProjectTest.js"></script>
     </body>
 
